# py-mxcomponent5

./: .gitignore  LICENSE  README.md  _act5.cpp  gen.py  setup.cfg  setup.py  test.py
mxcomponent5/: ActDefine.py  __init__.py  _act5.pyi  _act5_comtypes.py  _act5_ctypes.py
