[metadata]
name = mxcomponent5
version = 0.1.0
description = "Python binding for Mistubishi MX Component Ver.5"
long_description = file: README.md
long_description_content_type = text/markdown
author = LSY
author_email = grizlupo@daum.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    homepage = https://github.com/HumanAndSystem/py-mxcomponent5

[options]
packages = find:
python_requires = >=3.11
package_dir =
    = .
test_suite = tests

[options.package_data]
* = *.pyi
mxcomponent5 = py.typed

[options.packages.find]
where = .

[build_ext]
inplace = 1